--- a/src/components/navigation/nav-styles.css
+++ b/src/components/navigation/nav-styles.css
@@ -9,6 +9,7 @@ nav {
 .nav-container {
     float: left;
     overflow: hidden;
+    padding-top: 10px;
 }
 
 .right-nav {
@@ -34,6 +35,6 @@ nav ul li {
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+    color: inherit !important;
+    text-decoration: none !important;
 }
