--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,12 @@
   text-align: center;
   padding-top: 100px;
 }
+
+.union {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.pick {
+  margin-top: 5rem;
+}
